<resources>
    <string name="app_name">Gwent</string>
    <string name="action_settings">Settings</string>
    <string name="next">Start Game</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Sample card for detailedcard - TODO: remove -->
    <string name="card_name" translatable="false">Rainfarn of Attre</string>
    <string name="card_types" translatable="false">Human, Knight</string>
    <string name="card_text" translatable="false">Deploy: Damage an enemy unit by 2. Conspiracy: Increase damage by 2.</string>
    <string name="card_flavortext" translatable="false">When Cintra fell, Attre followed, leaving its defenders a choice: accept the Nilfgaardian leash or die.</string>
    <string name="card_power" translatable="false">5</string>

    <string name="activate_ability">Ability</string>
    <string name="action_detailed_card">Detailed card</string>
    <string name="close">Close</string>
    <string name="mulligan">Mulligan</string>
    <string name="done">Done</string>
    <string name="pass_round">Pass</string>
    <string name="end_round">Finish</string>
    <string name="your_turn">Your turn</string>
    <string name="opponents_turn">Opponents turn</string>
    <string name="round">Round</string>
    <string name="game_id">GameId</string>
    <string name="waiting_for_opponent">Waiting for opponent</string>
    <string name="join_game">Join Game</string>
    <string name="join_game_instructions">Input GameId from other Player.</string>
    <string name="join">Join</string>
    <string name="could_not_join_game">Could not join game</string>
    <string name="game_created">Game Created:</string>
    <string name="could_not_create_game">Could not create game</string>

    <string name="game_ended">Game Ended</string>
    <string name="you_have_won">You have won!</string>
    <string name="opponents_has_won">Your opponent has won!</string>
    <string name="this_is_triss_merigold">"This is Triss Merigold, your opponent"</string>
    <string name="this_is_gerald_riva">This is Gerald of Riva, your opponent</string>
    <string name="choose_a_card_to_redraw">Choose a card to redraw</string>
    <string name="card_s_remaining">Card(s) remaining</string>
    <string name="cancel_mulligan">Cancel Mulligan</string>
    <string name="version">Version</string>
    <string name="code">Code</string>
    <string name="rules">Rules</string>

</resources>